# transcomp

./: .gitignore  CMakeLists.txt  Example.sublime-project  Example.sublime-workspace  GeraGraficos.py  power.txt
InstallationScripts/: auxiliar_functions.sh  external_contents_install.sh  install.sh  settings.sh
InstallationScripts/external_packages_scripts/: arch_packages.sh  cygwin_packages.sh
InstallationScripts/libraries_scripts/: boost-1.63.0.sh  cmake-3.8.2.sh  openmpi-2.1.0.sh  petsc-3.7.6.sh
Scripts/: arch_packages.sh  auxiliar_functions.sh  boost-1.63.0.sh  cygwin_packages.sh  debian_packages.sh  external_contents_install.sh  petsc-3.7.6.sh
UtilsLib/: CMakeLists.txt
UtilsLib/include/: Test.h
app/: CMakeLists.txt
app/source/: main.cpp
doc/: create_lib_and_link_app_manually.sh  cygwin_packages.txt  how_to_use_cmake.txt
lib/: CMakeLists.txt
lib/include/: CondicoesdeContorno.h  CriteriodeParada.h  GerenteVolumedeControle.h  Malha.h  PropriedadeTermica.h  SolverLinear.h
lib/source/: CondicoesdeContorno.cpp  CriteriodeParada.cpp  GerenteVolumedeControle.cpp  Malha.cpp  PropriedadeTermica.cpp  SolverLinear.cpp
libTest/: CMakeLists.txt
libTest/source/: mainDaMalha.cpp
